; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_genpkey.c_init_keygen_file.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_genpkey.c_init_keygen_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bio_err = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Parameters already set!\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"Can't open parameter file %s\0A\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"Error reading parameter file %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"Error initializing context\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i32*)* @init_keygen_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_keygen_file(i32** %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  %11 = load i32**, i32*** %5, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @bio_err, align 4
  %16 = call i32 @BIO_puts(i32 %15, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %63

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = call i32* @BIO_new_file(i8* %18, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %19, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %17
  %23 = load i32, i32* @bio_err, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @BIO_printf(i32 %23, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i8* %24)
  store i32 0, i32* %4, align 4
  br label %63

26:                                               ; preds = %17
  %27 = load i32*, i32** %8, align 8
  %28 = call i32* @PEM_read_bio_Parameters(i32* %27, i32* null)
  store i32* %28, i32** %9, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @BIO_free(i32* %29)
  %31 = load i32*, i32** %9, align 8
  %32 = icmp eq i32* %31, null
  br i1 %32, label %33, label %37

33:                                               ; preds = %26
  %34 = load i32, i32* @bio_err, align 4
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 @BIO_printf(i32 %34, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0), i8* %35)
  store i32 0, i32* %4, align 4
  br label %63

37:                                               ; preds = %26
  %38 = load i32*, i32** %9, align 8
  %39 = load i32*, i32** %7, align 8
  %40 = call i32* @EVP_PKEY_CTX_new(i32* %38, i32* %39)
  store i32* %40, i32** %10, align 8
  %41 = load i32*, i32** %10, align 8
  %42 = icmp eq i32* %41, null
  br i1 %42, label %43, label %44

43:                                               ; preds = %37
  br label %54

44:                                               ; preds = %37
  %45 = load i32*, i32** %10, align 8
  %46 = call i64 @EVP_PKEY_keygen_init(i32* %45)
  %47 = icmp sle i64 %46, 0
  br i1 %47, label %48, label %49

48:                                               ; preds = %44
  br label %54

49:                                               ; preds = %44
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @EVP_PKEY_free(i32* %50)
  %52 = load i32*, i32** %10, align 8
  %53 = load i32**, i32*** %5, align 8
  store i32* %52, i32** %53, align 8
  store i32 1, i32* %4, align 4
  br label %63

54:                                               ; preds = %48, %43
  %55 = load i32, i32* @bio_err, align 4
  %56 = call i32 @BIO_puts(i32 %55, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0))
  %57 = load i32, i32* @bio_err, align 4
  %58 = call i32 @ERR_print_errors(i32 %57)
  %59 = load i32*, i32** %10, align 8
  %60 = call i32 @EVP_PKEY_CTX_free(i32* %59)
  %61 = load i32*, i32** %9, align 8
  %62 = call i32 @EVP_PKEY_free(i32* %61)
  store i32 0, i32* %4, align 4
  br label %63

63:                                               ; preds = %54, %49, %33, %22, %14
  %64 = load i32, i32* %4, align 4
  ret i32 %64
}

declare dso_local i32 @BIO_puts(i32, i8*) #1

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1

declare dso_local i32* @PEM_read_bio_Parameters(i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32* @EVP_PKEY_CTX_new(i32*, i32*) #1

declare dso_local i64 @EVP_PKEY_keygen_init(i32*) #1

declare dso_local i32 @EVP_PKEY_free(i32*) #1

declare dso_local i32 @ERR_print_errors(i32) #1

declare dso_local i32 @EVP_PKEY_CTX_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
